argocd/pipelineiq-ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pipelineiq-agic
  namespace: pipelineiq-dev
spec:
  ingressClassName: azure-application-gateway
  rules:
    - host: www.pipelinesolutions.xyz
      http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8081

          - path: /api/webhooks/github
            pathType: Prefix
            backend:
              service:
                name: webhook-service
                port:
                  number: 8087

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: dashboard-api
                port:
                  number: 8080

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
