argocd/pipelineiq-ingress-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pipelineiq-agic-prod
  namespace: pipelineiq-prod
  annotations:
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: cert-pipelineiq-pipelineiq-tls
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: azure-application-gateway

  tls:
    - hosts:
        - www.pipelinesolutions.xyz

  rules:
    - host: www.pipelinesolutions.xyz
      http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8081

          - path: /api/webhooks/github
            pathType: Prefix
            backend:
              service:
                name: webhook-service
                port:
                  number: 8087

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: dashboard-api
                port:
                  number: 8080

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
